--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <footer class="bd-footer align-self-end mt-2 ">
         <i class="fa-solid fa-pen">created by FANTUAN</i>
-        <a href="https://SiteStates.com" title="站長工具">
+        <a href="https://SiteStates.com" class="site-states" title="站長工具">
             <img src="https://SiteStates.com/show/image/33301.jpg" border="0" />
         </a>
     </footer>
@@ -146,6 +146,9 @@
     .fa-pen {
         margin: 18px auto auto 15px;
         letter-spacing: 2px;
+    }
+    .site-states{
+        justify-content: flex-end;
     }
 </style>
 <script>
