--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <script></script>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
+<script></script>
+<script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
+<style></style>
 
 <body>
 
@@ -233,14 +236,14 @@
 <style>
 html,
 .body {
-  width: 100vw;
-  min-height: 100vh;
+  width: 390px;
+  min-height: 844px;
   background-color: #f3f4f4;
 }
 .pop-btn {
   border-radius: 50%;
   border: 0px;
-  font-size: 30px;
+  fon-size: 30px;
   color: #f7ffeb;
   z-index: 5;
   background-color: #d49e48;
@@ -284,7 +287,7 @@ img {
   object-fit: cover;
 }
 .sec-container {
-  width: 100vw;
+  width: 390px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -429,7 +432,6 @@ img {
   margin-top: 20px;
   padding: 15px;
 }
-
 </style>
 <script>
     //彈出視窗
