--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">&nbsp; 錯誤回報</a>
     </i>
     <p>任何問題請洽 Instagram: @a.vocab.o</p>
+    <img src="https://SiteStates.com/show/image/33508.jpg" border="0" />
   </footer>
 </body>
 </html>
