--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ function checkAnswer(selectedIndex, selectedNode, vocabList) {
 function showResult(score, incorrectList) {
   quizSection.innerHTML = "";
   quizSection.style = "height: 0px;";
-  resultSection.style = "display: block;";
+  resultSection.style = "display: block; margin-top: 60px;";
   reviewToast.style = "display: block;";
   errorToast.style = "display: block;";
   incorrectList.style = "display: none;";
