--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </style>
 <script></script>
 <script></script>
+<script></script>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
 
@@ -239,7 +240,7 @@
     <p>哈囉你好，我是aVOCABo的開發者，希望藉由這個網站解決高中生死記硬背英文單字的現象。</p>
     <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
     </i>
-    <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">&nbsp; 錯誤回報</a>
+    <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
     </i>
     <p>任何問題請洽 Instagram: @a.vocab.o</p>
     <img src="https://SiteStates.com/show/image/33508.jpg" border="0" />
@@ -250,12 +251,12 @@
 <style>
 html,
 .body {
-  width: 390px;
-  height: 844px;
+  width: 100vw;
+  height: 100vh;
   background-color: #f3f4f4;
 }
 .navbar {
-  width: 390px;
+  width: 100vw;
   height: 60px;
   display: flex;
   justify-content: flex-start;
@@ -274,8 +275,8 @@ html,
   color: #f2b035;
 }
 .newsbar {
-  margin: 10px 25px 0px 25px;
-  width: 340px;
+  margin: 10px calc(5vw) 0px calc(5vw);
+  width: 90vw;
   border-radius: 25px;
   display: flex;
   justify-content: center;
@@ -314,7 +315,7 @@ img {
   object-fit: cover;
 }
 .sec-container {
-  width: 390px;
+  width: 100vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -346,7 +347,7 @@ img {
 }
 .quiz {
   display: none;
-  width: 100%;
+  width: 100vw;
   margin-top: 55px;
   height: 100vh;
 }
@@ -461,9 +462,10 @@ img {
   margin-top: 20px;
   padding: 15px;
 }
+
 </style>
 <script>
-   //彈出視窗
+  //彈出視窗
 const popAlert = document.querySelector(".pop-toast");
 
 //單字庫
