--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ html,
 }
 .navbar {
   width: 100vw;
-  height: 60px;
+  height: 16vh;
   display: flex;
   justify-content: flex-start;
   padding: 7px;
@@ -266,7 +266,7 @@ html,
   position: fixed;
 }
 .nav-title {
-  font-size: 28px;
+  font-size: 70px;
   font-weight: 650;
   color: #97bf6f;
 }
@@ -277,7 +277,8 @@ html,
 .newsbar {
   margin: 10px calc(5vw) 0px calc(5vw);
   width: 90vw;
-  border-radius: 25px;
+  height: 10vh;
+  border-radius: 40px;
   display: flex;
   justify-content: center;
   background-color: rgba(215, 190, 150, 0.5);
@@ -288,7 +289,7 @@ html,
   opacity: 0.8;
   margin: 0px 5px 0px 5px;
   padding: 6px;
-  font-size: 16px;
+  font-size: 55px;
   font-weight: 500;
   letter-spacing: 1.5px;
 }
@@ -307,10 +308,10 @@ img {
   border-radius: 25px;
 }
 .fa-instagram {
-  font-size: 20px;
+  font-size: 65px;
 }
 .card-img-top {
-  max-height: 200px;
+  max-height: 600px;
   width: 100%;
   object-fit: cover;
 }
@@ -331,6 +332,7 @@ img {
 .magazine {
   width: 100%;
   margin-top: 25px;
+  font-size: 60px;
 }
 .card-new-content,
 .card-textbook,
@@ -372,7 +374,7 @@ img {
   padding: 10px;
   border-radius: 20px;
   background-color: #cacaca;
-  font-size: 20px;
+  font-size: 60px;
 }
 .vocinput-container {
   margin-left: 2.5%;
@@ -385,10 +387,10 @@ img {
 
 .input-underline {
   position: relative;
-  margin: 10px;
-  border-width: 2px;
+  margin: 30px;
+  border-width: 10px;
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 5px solid black;
   background-color: transparent;
 }
 
@@ -398,7 +400,7 @@ img {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 2px;
+  height: 6px;
   background-color: black;
 }
 
@@ -406,20 +408,20 @@ img {
   border: none;
   outline: none;
   background: none;
-  padding: 5px;
+  padding: 10px;
 }
 
 .input-label {
   font-weight: bold;
   color: blue;
-  margin-left: 8px;
+  margin-left: 24px;
   position: absolute;
   right: 2.5%;
-  bottom: 5px;
+  bottom: 10px;
 }
 .helpBtn {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 45px;
+  margin-bottom: 45px;
   font-weight: 700;
 }
 .quiz-title,
@@ -436,14 +438,14 @@ img {
 #option-3,
 #option-4 {
   width: 90%;
-  padding: 12px;
-  margin: 15px;
+  padding: 36px;
+  margin: 45px;
   text-align: left;
   display: flex;
   justify-content: flex-start;
 }
 .toast-body {
-  font-size: 1.2rem;
+  font-size: 55px;
   font-weight: bold;
 }
 .result {
@@ -452,17 +454,16 @@ img {
 .review-toast,
 .error-toast {
   width: 95%;
-  margin: 10px;
-  font-size: 20px;
+  margin: 30px;
+  font-size: 55px;
   font-weight: 300;
 }
 .footer {
   background-color: #d7be96;
   width: 100%;
-  margin-top: 20px;
-  padding: 15px;
+  margin-top: 60px;
+  padding: 45px;
 }
-
 </style>
 <script>
   //彈出視窗
