--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@ html,
 }
 .navbar {
   width: 100vw;
-  height: 16vh;
+  height: 8vh;
   display: flex;
   justify-content: flex-start;
   padding: 7px;
-  padding-left: 12px;
+  padding-left: 18px;
   background-color: #e9e9e9;
   position: fixed;
 }
@@ -294,8 +294,7 @@ html,
   letter-spacing: 1.5px;
 }
 .car-container {
-  margin-top: 60px;
-  padding-top: 20px;
+  margin-top: calc(8vh+35px);
   display: flex;
   justify-content: center;
   align-content: center;
@@ -315,6 +314,10 @@ img {
   width: 100%;
   object-fit: cover;
 }
+.carousel-inner{
+  height: 20vh;
+  width: 20vh;
+}
 .sec-container {
   width: 100vw;
   display: flex;
@@ -332,7 +335,10 @@ img {
 .magazine {
   width: 100%;
   margin-top: 25px;
-  font-size: 60px;
+  font-size: 30px;
+}
+h5{
+  font-size: 45px;
 }
 .card-new-content,
 .card-textbook,
@@ -464,6 +470,7 @@ img {
   margin-top: 60px;
   padding: 45px;
 }
+
 </style>
 <script>
   //彈出視窗
