--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@ html,
   color: #f2b035;
 }
 .newsbar {
-  margin: 10px calc(5vw) 0px calc(5vw);
+  margin: 1vh 8vw 0px 8vw;
   width: 90vw;
-  height: 10vh;
+  height: 3.5vh;
   border-radius: 40px;
   display: flex;
   justify-content: center;
@@ -289,12 +289,13 @@ html,
   opacity: 0.8;
   margin: 0px 5px 0px 5px;
   padding: 6px;
-  font-size: 55px;
+  font-size: 30px;
   font-weight: 500;
   letter-spacing: 1.5px;
 }
 .car-container {
-  margin-top: calc(8vh+35px);
+  margin-top: 8vh;
+  padding-top: 25px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -307,16 +308,14 @@ img {
   border-radius: 25px;
 }
 .fa-instagram {
-  font-size: 65px;
+  font-size: 25px;
 }
 .card-img-top {
   max-height: 600px;
   width: 100%;
   object-fit: cover;
 }
-.carousel-inner{
-  height: 20vh;
-  width: 20vh;
+.carousel-inner {
 }
 .sec-container {
   width: 100vw;
@@ -337,8 +336,8 @@ img {
   margin-top: 25px;
   font-size: 30px;
 }
-h5{
-  font-size: 45px;
+h5 {
+  font-size: 35px;
 }
 .card-new-content,
 .card-textbook,
@@ -470,7 +469,6 @@ h5{
   margin-top: 60px;
   padding: 45px;
 }
-
 </style>
 <script>
   //彈出視窗
