--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </style>
 <script></script>
 <script></script>
-<script></script>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
 
@@ -42,7 +41,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/s320/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w625-h627/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
             <p>你的背單字小幫手</p>
@@ -50,7 +49,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/s320/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w625-h627/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
             <p>
@@ -60,10 +59,10 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/s320/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w477-h479/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
-            <p>出錯了嗎?填表單告訴我!<i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
+            <p>出錯了嗎?填表單告訴我!<br><i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
               </i></p>
           </div>
         </div>
@@ -198,10 +197,10 @@
         <div class="vocinput-container">
           <div class="input-underline">
             <input type="text" class="vocab-quiz-input" placeholder="請輸入文字">
-            <span class="input-label get-hint"><i class="fa-solid fa-check"></i></span>
+            <span class="input-label get-hint"><i class="fa-solid fa-lightbulb"></i></span>
           </div>
-          <div class="helpBtn"></div>
           <div class="vocab-quiz-inf"></div>
+          <div class="helpBtn"></div>
         </div>
       </div>
 
@@ -260,13 +259,12 @@ html,
   height: 8vh;
   display: flex;
   justify-content: flex-start;
-  padding: 7px;
-  padding-left: 18px;
+  padding: 1.2vh;
   background-color: #e9e9e9;
   position: fixed;
 }
 .nav-title {
-  font-size: 70px;
+  font-size: 4vh;
   font-weight: 650;
   color: #97bf6f;
 }
@@ -278,7 +276,7 @@ html,
   margin: 1vh 8vw 0px 8vw;
   width: 90vw;
   height: 3.5vh;
-  border-radius: 40px;
+  border-radius: 1.5vh;
   display: flex;
   justify-content: center;
   background-color: rgba(215, 190, 150, 0.5);
@@ -287,35 +285,36 @@ html,
 }
 .bar {
   opacity: 0.8;
-  margin: 0px 5px 0px 5px;
-  padding: 6px;
-  font-size: 30px;
+  margin-left: 0.2vh;
+  margin-right: 0.2vh;
+  padding: 0.3vh;
+  font-size: 1.8vh;
   font-weight: 500;
-  letter-spacing: 1.5px;
+  letter-spacing: 0.2vh;
 }
 .car-container {
   margin-top: 8vh;
-  padding-top: 25px;
+  padding-top: 1.8vh;
   display: flex;
   justify-content: center;
   align-content: center;
 }
 .fa-link {
   color: white;
-  color: white;
 }
 img {
-  border-radius: 25px;
+  border-radius: 1vh;
 }
 .fa-instagram {
-  font-size: 25px;
+  font-size: 2vh;
 }
 .card-img-top {
-  max-height: 600px;
+  max-height: 18vh;
   width: 100%;
   object-fit: cover;
 }
 .carousel-inner {
+  font-size: 2vh;
 }
 .sec-container {
   width: 100vw;
@@ -333,11 +332,8 @@ img {
 .vocbook,
 .magazine {
   width: 100%;
-  margin-top: 25px;
-  font-size: 30px;
-}
-h5 {
-  font-size: 35px;
+  margin-top: 1vh;
+  font-size: 2vh;
 }
 .card-new-content,
 .card-textbook,
@@ -345,17 +341,28 @@ h5 {
 .card-magazine {
   display: inline-block;
   width: 90%;
-  min-height: 100px;
-  max-height: 250px;
+  min-height: 18vh;
+  max-height: 25vh;
+  border-radius: 1vh;
 }
 .card-header {
+  padding: 1vh;
   font-weight: 650;
-  padding: 15px;
+  font-size: 2.4vh;
+}
+.btn-outline-dark {
+  font-size: 1.8vh;
+  padding: 1vh;
+  border-radius: 1.4vh;
+}
+.dropdown-item {
+  font-size: 1.4vh;
+  padding: 1.2vh;
 }
 .quiz {
   display: none;
   width: 100vw;
-  margin-top: 55px;
+  margin-top: 7.9vh;
   height: 100vh;
 }
 .card,
@@ -363,10 +370,25 @@ h5 {
   margin-left: 5%;
   margin-right: 5%;
 }
+.nav-link {
+  font-size: 1.8vh;
+  padding: 1vh;
+}
+.vocab-list {
+  margin-top: 0.5vh;
+  font-size: 1.6vh;
+}
 .list-group-item i {
   position: absolute;
   right: 0;
-  margin-right: 10px;
+  margin-right: 2vw;
+  font-size: 2vh;
+  padding: 1vh;
+}
+.word {
+  font-size: 1.8vh;
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
 }
 .scorebox {
   display: flex;
@@ -374,17 +396,16 @@ h5 {
 }
 .vocinput-score,
 .multi-score {
-  margin: 15px;
+  margin: 2vh;
   margin-bottom: 0px;
-  padding: 10px;
-  border-radius: 20px;
+  padding: 1vh;
+  border-radius: 1vh;
   background-color: #cacaca;
-  font-size: 60px;
+  font-size: 3vh;
 }
 .vocinput-container {
   margin-left: 2.5%;
   margin-right: 2.5%;
-  padding-top: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -392,10 +413,10 @@ h5 {
 
 .input-underline {
   position: relative;
-  margin: 30px;
-  border-width: 10px;
+  margin: 1.5vh;
+  border-width: 0.8vh;
   border: none;
-  border-bottom: 5px solid black;
+  border-bottom: 0.4vh solid black;
   background-color: transparent;
 }
 
@@ -405,28 +426,34 @@ h5 {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 6px;
-  background-color: black;
+  height: 0.01vh;
+  background-color: #363432;
 }
-
+.vocab-quiz-inf {
+  font-size: 1.8vh;
+}
 .input-underline input {
   border: none;
   outline: none;
   background: none;
-  padding: 10px;
+  padding: 0.3vh;
+  font-size: 1.6vh;
 }
-
+.fa-lightbulb:before {
+  font-size: 2vh;
+  color: #050505;
+}
 .input-label {
   font-weight: bold;
   color: blue;
-  margin-left: 24px;
+  margin-left: 1.5vh;
   position: absolute;
   right: 2.5%;
-  bottom: 10px;
+  bottom: 0.2vh;
 }
 .helpBtn {
-  margin-top: 45px;
-  margin-bottom: 45px;
+  margin-top: 1.8vh;
+  margin-bottom: 2vh;
   font-weight: 700;
 }
 .quiz-title,
@@ -443,14 +470,15 @@ h5 {
 #option-3,
 #option-4 {
   width: 90%;
-  padding: 36px;
-  margin: 45px;
+  padding: 1.5vh;
+  margin: 1.8vh;
   text-align: left;
   display: flex;
   justify-content: flex-start;
+  font-size: 2vh;
 }
 .toast-body {
-  font-size: 55px;
+  font-size: 2vh;
   font-weight: bold;
 }
 .result {
@@ -459,19 +487,21 @@ h5 {
 .review-toast,
 .error-toast {
   width: 95%;
-  margin: 30px;
-  font-size: 55px;
+  margin: 1.2vh;
+  font-size: 2vh;
   font-weight: 300;
 }
 .footer {
   background-color: #d7be96;
   width: 100%;
-  margin-top: 60px;
-  padding: 45px;
+  margin-top: 2vh;
+  padding: 1.5vh;
+  font-size: 1.8vh;
 }
+
 </style>
 <script>
-  //彈出視窗
+ //彈出視窗
 const popAlert = document.querySelector(".pop-toast");
 
 //單字庫
@@ -926,12 +956,12 @@ function hideSection() {
 function fillVocabList(vocabList, title) {
   for (let i = 0; i < vocabList.length; i++) {
     let listInnerText = `<li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
+    <div class="ms-2 me-auto word">
       <div class="fw-bold vocabListItem">
         ${vocabList[i]}
         <i class="fa-regular fa-star fa"></i>
       </div>
-      <div>${vocabList[(i += 1)]}</div>
+      <div class="word">${vocabList[(i += 1)]}</div>
     </div>
       </li>`;
     vocabListOl.innerHTML += listInnerText;
